[package]
name = "rcobs"
version = "0.1.0"
authors = ["Dario Nieuwenhuis <dirbaio@dirbaio.net>"]
description = "Reverse-COBS encoding"
repository = "https://github.com/Dirbaio/rcobs"
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"

categories = [
    "embedded",
    "no-std",
    "encoding",
]

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
hex-literal = "0.3.1"
